@@ -5,19 +5,19 @@
 
     <groupId>com.kodcu</groupId>
     <artifactId>AsciidocFX</artifactId>
-    <version>1.5.5</version>
+    <version>1.5.6</version>
     <packaging>jar</packaging>
 
     <name>AsciidocFX</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.9</java.version>
-        <maven.compiler.source>1.9</maven.compiler.source>
-        <maven.compiler.target>1.9</maven.compiler.target>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <mainClass>com.kodcu.boot.AppStarter</mainClass>
         <install4j.home>/home/travis/build/asciidocfx/AsciidocFX/install4j6</install4j.home>
-        <install4j.licenseKey>${env.CI_LICENSE_KEY}</install4j.licenseKey>
+        <install4j.licenseKey>${env.INS_LICENSE}</install4j.licenseKey>
     </properties>
 
     <organization>
@@ -27,7 +27,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.4.RELEASE</version>
+        <version>1.5.7.RELEASE</version>
     </parent>
 
     <dependencies>
@@ -128,7 +128,7 @@
         <dependency>
             <groupId>org.carrot2</groupId>
             <artifactId>morfologik-speller</artifactId>
-            <version>2.1.3</version>
+            <version>2.1.4</version>
             <exclusions>
                 <exclusion>
                     <artifactId>morfologik-polish</artifactId>
@@ -145,17 +145,17 @@
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-core</artifactId>
-            <version>1.10.0-SNAPSHOT</version>
+            <version>1.9.0</version>
         </dependency>
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-javafx</artifactId>
-            <version>1.10.0-SNAPSHOT</version>
+            <version>1.9.0</version>
         </dependency>
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-fontawesome-pack</artifactId>
-            <version>1.10.0-SNAPSHOT</version>
+            <version>1.9.0</version>
         </dependency>
         <dependency>
             <groupId>com.asciidocfx</groupId>
@@ -208,9 +208,9 @@
                         -XX:+UseG1GC
                         -Xmx1G
                         -Djava.awt.headless=false
-                        --add-opens javafx.base/com.sun.javafx.collections=javafx.web
-                        --add-exports javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED
                     </extraJvmArguments>
+                    <!--&#45;&#45;add-opens javafx.base/com.sun.javafx.collections=javafx.web-->
+                    <!--&#45;&#45;add-exports javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED-->
                     <repositoryLayout>flat</repositoryLayout>
                     <useWildcardClassPath>true</useWildcardClassPath>
                     <binFileExtensions>
